--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -1,149 +1,119 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto');
-
-body{
-	font-family: 'Roboto', sans-serif;
+@import url('https://fonts.googleapis.com/css?family=Roboto'); body {
+    font-family: 'Roboto', sans-serif;
 }
+
 * {
-	margin: 0;
-	padding: 0;
+    margin: 0;
+    padding: 0;
 }
+
 i {
-	margin-right: 10px;
-}/* ---------horizontal-navbar-menu-----------*/
+    margin-right: 10px;
+}
+
+/* ---------horizontal-navbar-menu-----------*/
 #navbar-animmenu {
-	background: #5161ce;
-	float: left;
-	overflow: hidden;
-	position: relative;
-	padding: 10px 0px;
-  width: 100%;
+    background: #5161ce;
+    float: left;
+    overflow: hidden;
+    position: relative;
+    padding: 10px 0px;
+    width: 100%;
 }
-#navbar-animmenu ul{
-	padding: 0px;
-	margin: 0px;
-  
+
+#navbar-animmenu ul {
+    padding: 0px;
+    margin: 0px;
+
+
 }
-.grid-container {
-	display: grid;
-	column-gap: 0px;
-	grid-template-columns: auto auto auto;
-	background-color: #2196F3;
-	padding: 10px;
-  }
-  
-  .grid-item {
-	background-color: rgba(255, 255, 255, 0.8);
-	border: 1px solid rgba(0, 0, 0, 0.8);
-	padding: 20px;
-	font-size: 30px;
-	text-align: center;
-  }
 
-  .dropdown {
-	position: relative;
-	display: inline-block;
-  }
-  
-  .dropdown-content {
-	display: none;
-	position: absolute;
-	background-color: #f9f9f9;
-	min-width: 160px;
-	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-	padding: 12px 16px;
-	z-index: 1;
-  }
-  
-  .dropdown:hover .dropdown-content {
-	display: block;
-  }
-  
-
-#navbar-animmenu ul li a i{
-	margin-right: 10px;
+#navbar-animmenu ul li a i {
+    margin-right: 10px;
 }
 
 #navbar-animmenu li {
-	list-style-type: none;
-	float: left;
+    list-style-type: none;
+    float: left;
 }
 
-#navbar-animmenu ul li a{
-	color: rgba(255,255,255,0.5);
+#navbar-animmenu ul li a {
+    color: rgba(255,255,255,0.5);
     text-decoration: none;
     font-size: 15px;
     line-height: 45px;
     display: block;
     padding: 0px 20px;
-    transition-duration:0.6s;
-	transition-timing-function: cubic-bezier(0.68, -0.55, 0.265, 1.55);
+    transition-duration: 0.6s;
+    transition-timing-function: cubic-bezier(0.68, -0.55, 0.265, 1.55);
     position: relative;
 }
 
-#navbar-animmenu>ul>li.active>a{
-	color: #5161ce;
-	background-color: transparent;
-	transition: all 0.7s;
+#navbar-animmenu>ul>li.active>a {
+    color: #5161ce;
+    background-color: transparent;
+    transition: all 0.7s;
 }
-
 
 #navbar-animmenu a:not(:only-child):after {
-	content: "\f105";
-	position: absolute;
-	right: 20px;
-	top: 10%;
-	font-size: 14px;
-	font-family: "Font Awesome 5 Free";
-	display: inline-block;
-	padding-right: 3px;
-	vertical-align: middle;
-	font-weight: 900;
-	transition: 0.5s;
+    content: "\f105";
+    position: absolute;
+    right: 20px;
+    top: 10%;
+    font-size: 14px;
+    font-family: "Font Awesome 5 Free";
+    display: inline-block;
+    padding-right: 3px;
+    vertical-align: middle;
+    font-weight: 900;
+    transition: 0.5s;
 }
 
-#navbar-animmenu .active>a:not(:only-child):after {
-	transform: rotate(90deg);
+
+.hori-selector {
+    display: inline-block;
+    position: absolute;
+    height: 100%;
+    top: 10px;
+    left: 0px;
+    transition-duration: 0.6s;
+    transition-timing-function: cubic-bezier(0.68, -0.55, 0.265, 1.55);
+    background-color: #fff;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
 }
-.hori-selector{
-	display:inline-block;
-	position:absolute;
-	height: 100%;
-	top: 10px;
-	left: 0px;
-	transition-duration:0.6s;
-	transition-timing-function: cubic-bezier(0.68, -0.55, 0.265, 1.55);
-	background-color: #fff;
-	border-top-left-radius: 15px;
-	border-top-right-radius: 15px;
+
+.hori-selector .right, .hori-selector .left {
+    position: absolute;
+    width: 25px;
+    height: 25px;
+    background-color: #fff;
+    bottom: 10px;
 }
-.hori-selector .right,
-.hori-selector .left{
-	position: absolute;
-	width: 25px;
-	height: 25px;
-	background-color: #fff;
-	bottom: 10px;
+
+.hori-selector .right {
+    right: -25px;
 }
-.hori-selector .right{
-	right: -25px;
+
+.hori-selector .left {
+    left: -25px;
 }
-.hori-selector .left{
-	left: -25px;
-}
-.hori-selector .right:before,
-.hori-selector .left:before{
-	content: '';
+
+.hori-selector .right:before, .hori-selector .left:before {
+    content: '';
     position: absolute;
     width: 50px;
     height: 50px;
     border-radius: 50%;
     background-color: #5161ce;
 }
-.hori-selector .right:before{
-	bottom: 0;
+
+.hori-selector .right:before {
+    bottom: 0;
     right: -25px;
 }
-.hori-selector .left:before{
-	bottom: 0;
+
+.hori-selector .left:before {
+    bottom: 0;
     left: -25px;
 }
